1.18.2-3.0.1:
- Fixed Shelf crashing when placed on top of blocks.