@@ -26,3 +26,4 @@ forge*changelog.txt
 
 src/generated
 /all_assets/
+/lib/
