@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 #Mod meta data
 modname=com.alaharranhonor.swdm.SWDM
-version=1.18.2-3.0.0
+version=1.18.2-3.0.1
 curse_type=release
 projectId=568104
 github_project=alaharranhonor/SWDecoM
