@@ -7,12 +7,12 @@
     {   "from": [ 0, 13, 0 ],
       "to": [ 16, 16, 16 ],
       "faces": {
-        "down":  { "uv": [ 0,  0, 16, 16 ], "texture": "#top","tintindex": 0, "cullface": "down" },
-        "up":    { "uv": [ 0, 16, 16, 0 ], "texture": "#bottom", "tintindex": 0, "cullface": "up" },
-        "north": { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0, "cullface": "north" },
-        "south": { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0, "cullface": "south" },
-        "west":  { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0, "cullface": "west" },
-        "east":  { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0, "cullface": "east" }
+        "down":  { "uv": [ 0,  0, 16, 16 ], "texture": "#top","tintindex": 0 },
+        "up":    { "uv": [ 0, 16, 16, 0 ], "texture": "#bottom", "tintindex": 0 },
+        "north": { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0 },
+        "south": { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0 },
+        "west":  { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0 },
+        "east":  { "uv": [ 0, 0, 16, 3 ], "texture": "#side", "tintindex": 0 }
       }
     }
   ]
