@@ -9,12 +9,12 @@
       "from": [ 0, 0, 0 ],
       "to": [ 3, 16, 16 ],
       "faces": {
-        "up":    { "uv": [  13,  0, 16, 16 ], "texture":  "#side",  "cullface": "up" },
-        "down":  { "uv": [  13,  0, 16, 16 ], "texture": "#side",  "cullface": "down"  },
-        "north": { "uv": [  13,  0, 16, 16 ], "texture": "#side", "cullface": "north" },
-        "south": { "uv": [  13,  0, 16, 16 ], "texture": "#side",  "cullface": "south" },
-        "west":  { "uv": [  0,  0, 16, 16 ], "texture": "#front",  "cullface": "west" },
-        "east":  { "uv": [  0,  0, 16, 16 ], "texture": "#back",  "cullface": "east" }
+        "up":    { "uv": [  13,  0, 16, 16 ], "texture":  "#side" },
+        "down":  { "uv": [  13,  0, 16, 16 ], "texture": "#side" },
+        "north": { "uv": [  13,  0, 16, 16 ], "texture": "#side" },
+        "south": { "uv": [  13,  0, 16, 16 ], "texture": "#side" },
+        "west":  { "uv": [  0,  0, 16, 16 ], "texture": "#front" },
+        "east":  { "uv": [  0,  0, 16, 16 ], "texture": "#back" }
       }
     }
   ]
