@@ -1,2 +1,3 @@
 1.18.2-3.0.1:
 - Fixed Shelf crashing when placed on top of blocks.
+- Fixed Chains and Pylon not connecting to walls
